# blockcaptain-nas

./: CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  requirements.in  requirements.txt  setup.cfg
.github/workflows/: build-dist.yml
builder/: dodo.py  makepyz.sh  pyproject.toml  user-data
builder/isomodder/: __init__.py  _builder.py  _failure.py  _fetcher.py  _hashing.py  _iso.py  _progress.py
builder/paranoid/: init_btrfs.sh  init_paranoid.sh
builder/paranoidnas/media/: __init__.py  __main__.py  _media.py  user-data.yaml
builder/paranoidnas/media/media_content/: init_paranoid.sh
builder/paranoidnas/media/media_content/backup/: daily.py
builder/paranoidnas/media/media_content/influx/: init_influx.sh
builder/paranoidnas/media/media_content/init/: init_data_fs.sh  init_os_backup.sh  recover_os_fs.sh  upgrade_os.sh
docs/: cloud-backup.md  getting-started.md  hosting-services.md  index.md  monitoring.md  post-install.md  recovery.md  system-services.md
eng/: build_pyz.sh
eng/docs/: makepyz.sh  requirements.txt
media/: makepyz.sh  requirements.in  requirements.txt
media/paranoidnas/media/: __main__.py  _media.py  _ui.py
media/paranoidnas/media/media_content/backup/: deadman.py  paranoidnas.py  weekly.py
media/paranoidnas/media/media_content/influx/: docker-compose.yaml
media/paranoidnas/media/media_content/init/: init_backup_fs.sh  init_data_backup.sh  (+1 more)
scripts/: testiso.sh  testvm.sh
src/paranoidnas/media/: __main__.py  _media.py  _ui.py  user-data.yaml
src/paranoidnas/media/media_content/: init_btrfs.sh  init_paranoid.sh
